src/sass/pages/_restaurant-list.scss
/* Restaurant List */

.restaurant-list-page__header {
  height: 45rem;

  padding: 4rem 12%;
}

.restaurant-search {
  margin: 4.5rem auto 0 auto;
  padding-top: 6rem;
  width: 94%;
  font-weight: 300;
  display: flex;
  flex-direction: column;

  @include respond(phone-land) {
    width: 96%;
  }

  @include respond(desktop) {
    padding: 10rem;
    margin: 0;
    margin-top: 7rem;
    padding-left: 2rem;
    width: 80%;
  }

  &__title {
    font-size: 3.6rem;
    font-weight: 100;
    color: $color-white;
    text-shadow: 2px 2px 1px rgba($color-black, 0.2);

    @include respond(desktop) {
      font-size: 3.6rem;
      font-weight: 300;
    }
  }
  &__box {
    padding-top: 2rem;
    display: flex;
    flex-direction: column;
  }
  &__form {
    @include respond(desktop) {
      display: flex;
    }
  }
  &__input {
    display: block;
    width: 100%;
    height: 5rem;
    color: $color-font-dark;
    line-height: 5rem;
    font-size: 1.8rem;
    padding: 0;
    border-style: none;
    border-radius: 0.5rem;
    margin-bottom: 0.5rem;

    @include respond(desktop) {
      margin-right: 1rem;
    }
  }
  &__submit {
    display: block;
    width: 100%;
    background-color: $color-main;
    color: $color-white;
    font-weight: 500;
    margin-top: 0.5rem;
    height: 4rem;
    line-height: 3rem;
    font-size: 1.8rem;
    padding: 0.5rem 1rem;
    border-style: none;
    border-radius: 0.5rem;
    transition: all 0.2s;

    text-align: center;
    text-decoration: none;

    @include respond(desktop) {
      height: 5rem;
      width: 50%;
      margin-top: 0;
    }

    &:hover {
      cursor: pointer;
      background-color: $color-font-dark;
      transform: translateY(-3px);
    }
  }
}

.restaurant-list-breadcrumb {
  padding: 1.5rem;
  border-bottom: 1px solid $color-font-light;

  &__list {
    list-style: none;
    display: flex;
  }
  &__item {
    font-size: 1.6rem;
  }
  &__separator {
    margin: 0 0.5rem;
  }
  &--current {
    font-weight: 700;
    font-size: 150%;
  }
}

/* restaurant list filter */
.restaurant-list-filter {
  border: 1px solid $color-gray-light;
  border-radius: $border-radius-small;
  margin: 2rem 0;

  @include respond(tab-land) {
    display: flex;
  }
}

.filter-dropdown {
  position: relative;

  @include respond(tab-land) {
    width: 40%;
  }

  &--open {
    .filter-dropdown__head {
      background-color: $color-font-light;
      box-shadow: $box-shadow;
    }

    .filter-dropdown__cuisine-list {
      opacity: 1;
      visibility: visible;
    }
  }

  &__head {
    height: 8rem;
    padding: 1.5rem 3rem;
    padding-top: 1rem;
    margin-right: auto;
    margin-left: auto;
    color: $color-font-dark;
    border-bottom: 1px solid $color-font-light;

    position: relative;
    display: flex;
    align-items: center;

    &:hover {
      cursor: pointer;
    }
  }

  &__icon {
    position: relative;
    font-size: 2.7rem;
    margin-right: 1.5rem;

    &--angle-down {
      margin-right: 0;

      @include respond(phone-land) {
        margin-left: 30rem;
      }

      @include respond(tab-land) {
        margin-left: 0;
      }

      @include respond(desktop) {
        margin-left: 0;
      }
    }
  }

  &__count {
    opacity: 0;
    visibility: hidden;

    position: absolute;
    top: -1rem;
    right: -0.9rem;
    width: 2rem;
    height: 2rem;
    border-radius: 50%;
    color: $color-white;
    background-color: $color-main;
    font-size: 1.25rem;
    font-family: "Oswald", sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;

    &--visible {
      opacity: 1;
      visibility: visible;
    }
  }

  &__title {
    font-size: 2.2rem;
    margin-right: auto;
    letter-spacing: 0.5px;
    text-transform: uppercase;
  }

  &__clear {
    display: none;
    position: absolute;
    left: 6.8rem;
    bottom: 0.75rem;
    color: $color-main;
    font-size: 1.5rem;

    &--visible {
      display: inline-block;
    }

    &:hover {
      text-decoration: underline;
    }
  }

  &__cuisine-list {
    opacity: 0;
    visibility: hidden;

    list-style: none;
    position: absolute;
    top: 8.1rem;
    background-color: $color-white;
    width: 100%;
    // height: 25rem;
    max-height: 25rem;
    overflow: scroll;
    z-index: 1;
    padding: 1.5rem 2rem;
    padding-top: 2rem;
    box-shadow: $box-shadow;
    border-bottom-left-radius: $border-radius-small;
    border-bottom-right-radius: $border-radius-small;

    display: flex;
    flex-wrap: wrap;

    transition: all 0.2s;
  }

  &__cuisine-item {
    height: 3.1rem;
    margin: 0.5rem;
    display: inline-block;
  }

  &__cuisine-checkbox {
    display: none;
  }
  &__cuisine-name {
    box-shadow: 0 2px 4px rgba($color-black, 0.1);
    padding: 0.5rem 2rem;
    color: $color-font-dark;
    font-size: 1.5rem;
    letter-spacing: 0.75px;
    border: 1px solid $color-gray-light;
    border-radius: 100px;
    transition: all 0.2s;

    &--selected {
      color: $color-white;
      background-color: $color-main;
    }
  }
  &__cuisine-checkbox:checked ~ &__cuisine-name {
    color: $color-white;
    background-color: $color-main;
  }
}

.filter-checkbox {
  padding: 1.5rem 3rem;
  padding-left: 5rem;
  background-color: $color-font-light;
  font-size: 150%;

  display: flex;
  align-items: center;

  @include respond(tab-land) {
    width: 40%;
    display: flex;
    align-items: center;
  }

  &__title {
    position: relative;
    cursor: pointer;

    &::before,
    &::after {
      position: absolute;
    }

    &::before {
      top: 0;
      left: -3rem;
      content: "";
      display: inline-block;
      height: 2rem;
      width: 2rem;
      border: 1px solid $color-main;
      border-radius: $border-radius-small;
    }

    &::after {
      top: 0.45rem;
      left: -2.5rem;
      content: "";
      display: inline-block;
      height: 8px;
      width: 12px;
      border-left: 2px solid;
      border-bottom: 2px solid;
      transform: rotate(-45deg);
      color: $color-main;
    }

    @include respond(tab-land) {
      font-size: 1.7rem;
      margin-left: 1rem;
      letter-spacing: 0.5px;
    }
  }

  &__input {
    opacity: 0;
  }

  & input[type="checkbox"] + label::after {
    content: none;
  }

  & input[type="checkbox"]:checked + label::after {
    content: "";
  }
  & input[type="checkbox"]:focus + label::before {
    outline: $color-main auto 5px;
  }
}

.filter-grid {
  display: none;
  width: 20%;
  padding: 1.5rem 3rem;
  background-color: $color-font-light;

  @include respond(tab-land) {
    display: flex;
    justify-content: flex-end;
    align-items: center;
  }
}

.grid-btn {
  margin-left: 1rem;

  &__icon {
    width: 3rem;
    height: 2rem;

    opacity: 0.2;
  }

  &--active .grid-btn__icon {
    opacity: 1;
  }
}

/* restaurant list */
.restaurant-list {
  position: relative;
  min-height: 20rem;

  margin-bottom: 4rem;
  display: grid;
  grid-template-columns: auto;

  box-shadow: $box-shadow-light;

  @include respond(tab-land) {
    grid-template-columns: repeat(3, 1fr);
    column-gap: 1rem;
    row-gap: 1rem;
  }

  &__empty-template {
    // display: none;
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    color: $color-gray-dark;

    &--visible {
      display: block;
    }

    h3 {
      font-weight: 400;
      font-size: 2.5rem;
      margin-bottom: 2rem;
    }

    img {
      width: 7.5rem;
      height: 7.5rem;
      margin-bottom: 2rem;
    }

    p {
      font-size: 1.8rem;
      color: $color-gray-dark;
      letter-spacing: 0.5px;
    }
  }
}

.grid-cols-two {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}
.grid-cols-three {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.restaurant-info-card {
  width: 100%;
  margin-bottom: 3rem;
  border-bottom: 1px solid $color-font-light;

  @include respond(tab-land) {
    margin-right: 2%;
    margin-bottom: 1rem;
    transition: all 0.2s;
  }

  &:hover {
    cursor: pointer;
  }

  &__head {
    min-height: 23rem;
    // background-image: url(../../assets/img/restaurant-cover.jpg);
    // background-size: cover;
    border-radius: 0.35rem;
    position: relative;
    transition: all 0.3s;

    @include respond(desktop) {
      min-width: auto;
    }

    &:hover {
      transform: scale(1.03);
      box-shadow: 1rem 1rem 2rem rgba($color-black, 0.2);
    }

    img {
      width: 100%;
      height: 23rem;
      border-radius: 0.35rem;
    }
  }
}

.delivery-detail {
  position: absolute;
  bottom: 2rem;
  right: 2rem;
  color: $color-white;
  text-align: center;
  line-height: 1.8rem;
  letter-spacing: 0.5px;
  text-shadow: 0.5rem 0.5rem 1rem rgba($color-black, 0.7);

  &__title {
    font-size: 1.75rem;
    font-weight: 300;
  }
  &__time {
    margin-top: 0.5rem;
    font-size: 1.25rem;

    @include respond(tab) {
      display: inline-block;
      margin-top: 1rem;
    }
  }
}

.restaurant-detail {
  padding: 1rem;
  padding-bottom: 1.5rem;
  min-height: 7.5rem;
  border-bottom: 1px solid $color-font-light;
  color: $color-font-dark;

  &__name {
    font-size: 2rem;
    line-height: 1;
    font-weight: 400;
    letter-spacing: 0.5px;

    @include respond(tab) {
      font-size: 3rem;
    }

    @include respond(desktop) {
      font-size: 2.5rem;
    }
  }
  &__desc {
    font-size: 1.5rem;
    line-height: 2.8rem;

    @include respond(tab) {
      font-size: 1.75rem;
      margin-top: 1rem;
    }

    @include respond(desktop) {
      font-size: 1.5rem;
      margin-top: 0.5rem;
    }
  }
}

.restaurant-tags {
  padding: 1rem 1rem;
  backface-visibility: hidden;

  &__tag-item {
    list-style: none;
    display: inline-block;
    font-size: 1.3rem;
    border-radius: 1.5rem;
    padding: 0.4rem 0.8rem;
    margin-right: 0.2rem;
    transition: all 0.2s;
    background-color: $color-main;
    color: $color-white;
    letter-spacing: 0.5px;

    &:hover {
      transform: scale(1.05) translateY(-0.2rem);
    }

    &--empty {
      background-color: $color-font-light;
      color: $color-font-dark;
    }
  }
}

